[package]
name = "autogen_rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1"
async-openai = { path = "./async-openai" }
reqwest = { version = "0.12.4", features = ["default-tls"] }
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
urlencoding = "2"
regex = "1.10.4"
futures = "0.3.30"
chrono = "0.4.38"
bincode = "1.3"
ractor = "0.14.7"
uuid = { version = "1.12.1", features = ["v4"] }
tokio = { version = "1", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
    "io-util",
    "io-std",
] }
log = "0.4.25"
env_logger = "0.11.6"

[workspace.lints.rust]
deprecated = "allow"
