[package]
name = "autogen_rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
path = "src/tester.rs"
name = "tester"

[[bin]]
path = "src/planner.rs"
name = "planner"

[dependencies]
anyhow = "1"
tool-builder = { path = "./tool-builder" }
async-openai = { path = "./async-openai" }
reqwest = { version = "0.12.4", features = ["default-tls"] }
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
urlencoding = "2"
regex = "1.10.4"
futures = "0.3.30"
chrono = "0.4.38"
bincode = "1.3"
ractor = "0.15.1"
# ractor = { version = "0.15.1", features = [
#     "async-trait",
# ], default-features = false }
uuid = { version = "1.12.1", features = ["v4"] }
tokio = { version = "1", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
    "io-util",
    "io-std",
] }
log = "0.4.25"
env_logger = "0.11.6"
tokio-util = "0.7.13"
ctor = "0.3.6"
once_cell = "1.20.3"
lazy_static = "1.5.0"
jsonxf = "1.1.1"
thiserror = "2.0.11"
escape8259 = "0.5.3"
tryhard = "0.5.1"


# [workspace]
# members = ["tool_builder"]

[workspace.lints.rust]
deprecated = "allow"
