[package]
name = "tool-builder"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
serde_json = "1.0.132"
once_cell = "1.20.2"
ctor = "0.2.8"
serde = { version = "1", features = ["derive"] }
